style basic views, implement navigation bar, fix overscroll for macOS

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -2,6 +2,14 @@ html, body {
   height: 100%;
 }
 
+html {
+  overflow: hidden;
+}
+
+body {
+  overflow: auto;
+}
+
 #root {
   display: flex;
   flex-direction: column;
