--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, #app {
   height: 100%;
 }
 
@@ -6,12 +6,8 @@ html {
   overflow: hidden;
 }
 
-body {
-  overflow: auto;
-}
-
-#root {
+#app {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  overflow: auto;
 }
